...
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        />


    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
...
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/colorTextBlack" />


    <EditText
        android:id="@+id/txtPassWord"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
...
